<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/numberInput"
            android:layout_width="match_parent" android:layout_height="250dp"
            android:background="@color/lightGrey"
            android:padding="10dp"
            android:textSize="48sp"
            android:hint="@string/calculator_hint_text"
            android:gravity="end|bottom"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="1">

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnSeven"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_7"
                app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnEight"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_8" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnNine"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_9" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:id="@+id/btnDivide"
                android:onClick="onOperator"
                android:backgroundTint="#4EA043"
                android:text="@string/_divide" app:cornerRadius="6dp">
        </Button>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="1">

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnFour"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_4" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnFive"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_5" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnSix"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_6" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:id="@+id/btnMultiply"
                android:onClick="onOperator"
                android:backgroundTint="#4EA043"
                android:text="@string/_multiply" app:cornerRadius="6dp">
        </Button>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="1">

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnOne"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_1" app:cornerRadius="6dp"/>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnTwo"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_2" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnThree"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_3" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:id="@+id/btnSubstract"
                android:onClick="onOperator"
                android:backgroundTint="#4EA043"
                android:text="@string/_minus" app:cornerRadius="6dp">
        </Button>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="1">

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnZero"
                android:layout_margin="2dp"
                android:onClick="onDigit"
                android:text="@string/_0" app:cornerRadius="6dp"/>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnDot"
                android:layout_margin="2dp"
                android:onClick="onDecimalPoint"
                android:text="@string/_dot" app:cornerRadius="6dp"/>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnClear"
                android:backgroundTint="#D14F4F"
                android:layout_margin="2dp"
                android:onClick="onClear"
                android:text="@string/_clr" app:cornerRadius="6dp">
        </Button>

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:id="@+id/btnAdd"
                android:onClick="onOperator"
                android:backgroundTint="#4EA043"
                android:text="@string/_plus" app:cornerRadius="6dp">
        </Button>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="1">

        <Button android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnEqual"
                android:layout_margin="2dp"
                android:backgroundTint="#1a78c2"
                android:onClick="onEqual"
                android:textSize="24sp"
                android:text="@string/_equal" app:cornerRadius="6dp"/>
    </LinearLayout>
</LinearLayout>